Page speed optimizations

--- a/.src/html/index.html
+++ b/.src/html/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en" xmlns="http://www.w3.org/1999/xhtml">
 	<head>
-		<?php echo file_get_contents(__DIR__.DIRECTORY_SEPARATOR.'css'.DIRECTORY_SEPARATOR.'icons-loader-fragment.html'); ?>
+		<!-- iconizr -->
 
 		<meta charset="utf-8" />
 		<title>Accessibility Club #4 + #5 — Hands-on webworker meetup about all things web accessibility &amp; assistive technology — November 7th + 10th, 2016</title>
@@ -133,7 +133,7 @@
                     <p>The event is <strong>limited to 60 attendees</strong> and run on a <strong>non-profit basis</strong>. Attendees are required to make <strong>a donation of any amount</strong> (min. € 15) which will be used to accomodate Karl and cover the basic expenses. Budget leftovers will entirely be donated to <a href="http://www.knowbility.org" target="_blank">Knowbility</a>.</p>
                     <p>Join us for this great gathering in Berlin,</p>
                     <a href="https://ti.to/tollwerk/accessibility-club-4" target="_blank" class="cto">get your ticket over at Tito</a>
-                    <p>and let your friends on <a href="https://twitter.com/intent/tweet?text=I%27ll+attend+Accessibility+Club+%234%21+Who%27s+in%3F+%23a11y+%23a11yclub&url=http://a11y.club&via=tollwerk" target="_blank">Twitter</a>, <a href="#" target="_blank">Facebook</a> and <a href="http://lanyrd.com/2016/accessibility-club-4" target="_blank">Lanyrd</a> know that you will be part of it!</p>
+                    <p>and let your friends on <a href="https://twitter.com/intent/tweet?text=I%27ll+attend+Accessibility+Club+%234%21+Who%27s+in%3F+%23a11y+%23a11yclub&url=http://a11y.club&via=tollwerk" target="_blank">Twitter</a>, <a href="https://www.facebook.com/events/573196169525979" target="_blank">Facebook</a> and <a href="http://lanyrd.com/2016/accessibility-club-4" target="_blank">Lanyrd</a> know that you will be part of it!</p>
 				</div>
 				<div class="right content">
                     <h2>November 10th, Nürnberg</h2>
