Added accessibility infos

--- a/.src/html/index.html
+++ b/.src/html/index.html
@@ -131,16 +131,25 @@
                     <blockquote class="talk-title">Modern Web Toolsets &amp; The Next Generation of Accessibility Testing Tools</blockquote>
                     <p>Expect a comprehensive view on the evolution of <strong>accessibilty testing</strong>, different approaches of how to add accessibility testing into a large number of touch-points in the development process and a lot of real-world examples. You will also (but not exclusively) learn quite a bit about the use of <a href="https://tenon.io" target="_blank">Tenon</a>.</p>
                     <p>The event is <strong>limited to 60 attendees</strong> and run on a <strong>non-profit basis</strong>. Attendees are required to make <strong>a donation of any amount</strong> (min. € 15) which will be used to accomodate Karl and cover the basic expenses. Budget leftovers will entirely be donated to <a href="http://www.knowbility.org" target="_blank">Knowbility</a>.</p>
-                    <p>Join us for this great gathering in Berlin,</p>
+                    <p>The event space itself is suitable for wheelchair users. To reach the space, however, one staircase downwards has to be taken. We'll happily assist you getting there.</p>
+					<p>Join us for this great gathering in Berlin,</p>
                     <a href="https://ti.to/tollwerk/accessibility-club-4" target="_blank" class="cto">get your ticket over at Tito</a>
                     <p>and let your friends on <a href="https://twitter.com/intent/tweet?text=I%27ll+attend+Accessibility+Club+%234%21+Who%27s+in%3F+%23a11y+%23a11yclub&url=http://a11y.club&via=tollwerk" target="_blank">Twitter</a>, <a href="https://www.facebook.com/events/573196169525979" target="_blank">Facebook</a> and <a href="http://lanyrd.com/2016/accessibility-club-4" target="_blank">Lanyrd</a> know that you will be part of it!</p>
 				</div>
 				<div class="right content">
                     <h2>November 10th, Nürnberg</h2>
-                    <p>The second meetup on Thursday, November 10th, will be hosted by <a href="#joschi">Joschi</a> at the <a href="#tollwerk">tollwerk</a> space in Nuremberg as usual. Again, <a href="#karl">Karl</a> will kick off things with a talk, but the topic is still to be decided and might differ from the one in Berlin. Please participate in this <a href="https://twitter.com/jkphl/status/768875945352626177" target="_blank">Twitter poll</a> to express your preference. Details about the topic, the schedule and whether the event will be free are expected to be available soon.</p>
+                    <p>The second meetup on Thursday, November 10th, will be hosted by <a href="#joschi">Joschi</a>
+						at the <a href="#tollwerk">tollwerk</a> space in Nuremberg as usual. Again, <a href="#karl">
+							Karl</a> will kick off things with a talk, but the topic is still to be decided and might
+						differ from the one in Berlin. We ran a quick <a
+								href="https://twitter.com/jkphl/status/768875945352626177" target="_blank">Twitter
+							poll</a> which will be evaluated in the next couple of days. Details about the topic, the
+						schedule and whether the event will	be
+						free are expected to be available soon.</p>
                     <o>Please <a href="mailto:hello@a11y-club.org">get in touch</a> if you're interested in</p>
                     <a href="mailto:hello@a11y-club.org" class="cto">sponsoring this event</a>
                     <p>or know someone who might be.</p>
+					<p>The event space in Nuremberg is generally suitable for wheelchair users. Similar to Berlin though, 2 steps up and down have to be taken for getting there. Please count on us for assistance!</p>
                     <h2>Sessions &amp; discussions</h2>
                     <p>At both meetups we will have a <strong>short break</strong> after Karl's talk where we can refresh ourselves and grab a snack. After the break we will switch into barcamp mode and collect <strong>topics for adhoc sessions and discussions</strong> like</p>
                     <ul>
