Added accessibility features

--- a/.src/html/index.html
+++ b/.src/html/index.html
@@ -131,7 +131,8 @@
                     <blockquote class="talk-title">Modern Web Toolsets &amp; The Next Generation of Accessibility Testing Tools</blockquote>
                     <p>Expect a comprehensive view on the evolution of <strong>accessibilty testing</strong>, different approaches of how to add accessibility testing into a large number of touch-points in the development process and a lot of real-world examples. You will also (but not exclusively) learn quite a bit about the use of <a href="https://tenon.io" target="_blank">Tenon</a>.</p>
                     <p>The event is <strong>limited to 60 attendees</strong> and run on a <strong>non-profit basis</strong>. Attendees are required to make <strong>a donation of any amount</strong> (min. € 15) which will be used to accomodate Karl and cover the basic expenses. Budget leftovers will entirely be donated to <a href="http://www.knowbility.org" target="_blank">Knowbility</a>.</p>
-                    <p>The event space itself is suitable for wheelchair users. To reach the space, however, one staircase downwards has to be taken. We'll happily assist you getting there.</p>
+                    <p>The event space itself is suitable for wheelchair users. To reach the space, however, a
+						staircase downwards has to be taken. We will happily assist you with getting there.</p>
 					<p>Join us for this great gathering in Berlin,</p>
                     <a href="https://ti.to/tollwerk/accessibility-club-4" target="_blank" class="cto">get your ticket over at Tito</a>
                     <p>and let your friends on <a href="https://twitter.com/intent/tweet?text=I%27ll+attend+Accessibility+Club+%234%21+Who%27s+in%3F+%23a11y+%23a11yclub&url=http://a11y.club&via=tollwerk" target="_blank">Twitter</a>, <a href="https://www.facebook.com/events/573196169525979" target="_blank">Facebook</a> and <a href="http://lanyrd.com/2016/accessibility-club-4" target="_blank">Lanyrd</a> know that you will be part of it!</p>
@@ -149,7 +150,8 @@
                     <o>Please <a href="mailto:hello@a11y-club.org">get in touch</a> if you're interested in</p>
                     <a href="mailto:hello@a11y-club.org" class="cto">sponsoring this event</a>
                     <p>or know someone who might be.</p>
-					<p>The event space in Nuremberg is generally suitable for wheelchair users. Similar to Berlin though, 2 steps up and down have to be taken for getting there. Please count on us for assistance!</p>
+					<p>The event space in Nuremberg is also generally wheelchair friendly. Similar to Berlin though,
+						2 steps up and down have to be taken for getting there. Please count on us for assistance!</p>
                     <h2>Sessions &amp; discussions</h2>
                     <p>At both meetups we will have a <strong>short break</strong> after Karl's talk where we can refresh ourselves and grab a snack. After the break we will switch into barcamp mode and collect <strong>topics for adhoc sessions and discussions</strong> like</p>
                     <ul>
