Added topic for a11yclub #5

--- a/.src/html/index.html
+++ b/.src/html/index.html
@@ -128,30 +128,28 @@
 					<h2>November 7th, Berlin</h2>
 					<p>The first meetup on Monday, November 7th, acts as a <strong>side event</strong> of the <a href="#btconf">beyond tellerrand // BERLIN 2016</a> conference. It's hosted by <a href="#joschi">Joschi</a> and <a href="#stefan">Stefan</a> at the fantastic premises of <a href="#contentful">Contentful</a> in Berlin Kreuzberg.</p>
                     <p><a href="#karl">Karl</a> will kick off the event at 12:00 pm with a talk with the promising title</p>
-                    <blockquote class="talk-title">Modern Web Toolsets &amp; The Next Generation of Accessibility Testing Tools</blockquote>
+                    <blockquote class="talk-title">Modern Web Toolsets &amp;amp; The Next Generation of Accessibility Testing Tools</blockquote>
                     <p>Expect a comprehensive view on the evolution of <strong>accessibilty testing</strong>, different approaches of how to add accessibility testing into a large number of touch-points in the development process and a lot of real-world examples. You will also (but not exclusively) learn quite a bit about the use of <a href="https://tenon.io" target="_blank">Tenon</a>.</p>
                     <p>The event is <strong>limited to 60 attendees</strong> and run on a <strong>non-profit basis</strong>. Attendees are required to make <strong>a donation of any amount</strong> (min. € 15) which will be used to accomodate Karl and cover the basic expenses. Budget leftovers will entirely be donated to <a href="http://www.knowbility.org" target="_blank">Knowbility</a>.</p>
                     <p>The event space itself is suitable for wheelchair users. To reach the space, however, a
 						staircase downwards has to be taken. We will happily assist you with getting there.</p>
 					<p>Join us for this great gathering in Berlin,</p>
-                    <a href="https://ti.to/tollwerk/accessibility-club-4" target="_blank" class="cto">get your ticket over at Tito</a>
+                    <a href="https://ti.to/tollwerk/accessibility-club-4" target="_blank" class="cto">get your a11yclub #4 ticket</a>
                     <p>and let your friends on <a href="https://twitter.com/intent/tweet?text=I%27ll+attend+Accessibility+Club+%234%21+Who%27s+in%3F+%23a11y+%23a11yclub&url=http://a11y.club&via=tollwerk" target="_blank">Twitter</a>, <a href="https://www.facebook.com/events/573196169525979" target="_blank">Facebook</a> and <a href="http://lanyrd.com/2016/accessibility-club-4" target="_blank">Lanyrd</a> know that you will be part of it!</p>
 				</div>
 				<div class="right content">
                     <h2>November 10th, Nürnberg</h2>
                     <p>The second meetup on Thursday, November 10th, will be hosted by <a href="#joschi">Joschi</a>
-						at the <a href="#tollwerk">tollwerk</a> space in Nuremberg as usual. Again, <a href="#karl">
-							Karl</a> will kick off things with a talk, but the topic is still to be decided and might
-						differ from the one in Berlin. We ran a quick <a
-								href="https://twitter.com/jkphl/status/768875945352626177" target="_blank">Twitter
-							poll</a> which will be evaluated in the next couple of days. Details about the topic, the
-						schedule and whether the event will	be
-						free are expected to be available soon.</p>
-                    <o>Please <a href="mailto:hello@a11y-club.org">get in touch</a> if you're interested in</p>
-                    <a href="mailto:hello@a11y-club.org" class="cto">sponsoring this event</a>
-                    <p>or know someone who might be.</p>
-					<p>The event space in Nuremberg is also generally wheelchair friendly. Similar to Berlin though,
-						2 steps up and down have to be taken for getting there. Please count on us for assistance!</p>
+						at the <a href="#tollwerk">tollwerk</a> space in Nuremberg as usual. <a href="#karl">
+							Karl</a> will kick off the event at 1:00 pm with a brand new talk titled</p>
+					<blockquote class="talk-title">What's in a name? Understanding accessible name calculation</blockquote>
+					<p>Ever wondered how a screenreader is calling and reading out certain parts of your website, and why exactly? What's «stronger», the text inside a link or its title attribute? Well, wonder no longer and join us for this complex but super interesting topic!</p>
+					<p>There's a good chance that the event space will be fully wheelchair accessible until November. If in doubt please <a href="mailto:hello@a11y-club.org">ask for details</a>!</p>
+					<a href="https://ti.to/tollwerk/accessibility-club-5" target="_blank" class="cto">The tickets for a11yclub #5</a>
+					<p>are <strong>limited to 50</strong> and available <strong>from € 15 each</strong> (larger
+						donations welcome). The money will
+						be used to cover Karl's travel expenses and further equip the tollwerk venue in order to bring you more events like this in the future.</p>
+					<p>Please let your friends on <a href="https://twitter.com/intent/tweet?text=I%27ll+attend+Accessibility+Club+%235%21+Who%27s+in%3F+%23a11y+%23a11yclub&url=http://a11y.club&via=tollwerk" target="_blank">Twitter</a>, <a href="https://www.facebook.com/events/703513239801157" target="_blank">Facebook</a> and <a href="http://lanyrd.com/2016/accessibility-club-5" target="_blank">Lanyrd</a> know that you support our little meetup! Also, if you're interested in <strong>supporting a11yclub as a sponsor</strong>, we'd totally <a href="mailto:hello@a11y-club.org">love to hear from you</a>!</p>
                     <h2>Sessions &amp; discussions</h2>
                     <p>At both meetups we will have a <strong>short break</strong> after Karl's talk where we can refresh ourselves and grab a snack. After the break we will switch into barcamp mode and collect <strong>topics for adhoc sessions and discussions</strong> like</p>
                     <ul>
