Fixed non-secure protocols

--- a/.src/html/index.html
+++ b/.src/html/index.html
@@ -33,33 +33,33 @@
 		<link rel="icon" href="/favicons/favicon.png" type="image/png" sizes="64x64" />
 		<link rel="icon" href="/favicon.ico" type="image/x-icon" />
 
-		<link rel="stylesheet" type="text/css" href="http://fonts.googleapis.com/css?family=Roboto+Slab:400,700" media="all" />
+		<link rel="stylesheet" type="text/css" href="https://fonts.googleapis.com/css?family=Roboto+Slab:400,700" media="all" />
 		<link rel="stylesheet" type="text/css" href="css/a11y-above.min.css" media="all" />
 
-		<!--[if lt IE 9]><script src="http://html5shiv.googlecode.com/svn/trunk/html5.js" type="text/javascript"></script><![endif]-->
+		<!--[if lt IE 9]><script src="https://html5shiv.googlecode.com/svn/trunk/html5.js" type="text/javascript"></script><![endif]-->
 		<!--[if gte IE 9]><style type="text/css">.gradient{filter: none}</style><![endif]-->
 
 		<meta property="og:type" content="website" />
 		<meta property="og:title" content="Accessibility Club #4 + #5 — November 7th + 10th, 2016" />
 		<meta property="og:description" content="Hands-on meetup for web developers and designers about all things web accessibility and assistive technology — November 7th + 10th, 2016" />
-		<meta property="og:image" content="http://accessibility-club.org/a11y.png" />
-		<meta property="og:url" content="http://accessibility-club.org" />
+		<meta property="og:image" content="https://accessibility-club.org/a11y.png" />
+		<meta property="og:url" content="https://accessibility-club.org" />
 		<meta property="og:site_name" content="Accessibility Club #4 + #5 — November 7th + 10th, 2016" />
 
 		<meta name="twitter:card" content="summary">
 		<meta name="twitter:site" content="@tollwerk">
 		<meta name="twitter:creator" content="@tollwerk">
-		<meta name="twitter:image" content="http://accessibility-club.org/a11y.png">
+		<meta name="twitter:image" content="https://accessibility-club.org/a11y.png">
 		<meta name="twitter:description" content="Hands-on meetup for web developers and designers about all things web accessibility and assistive technology — November 7th + 10th, 2016">
 		<meta name="twitter:title" content="Accessibility Club #4 + #5 — November 7th + 10th, 2016">
-		<meta name="twitter:url" content="http://accessibility-club.org">
+		<meta name="twitter:url" content="https://accessibility-club.org">
 
-        <link rel=canonical href=“http://accessibility-club.org” />
+        <link rel=canonical href=“https://accessibility-club.org” />
 	</head>
 	<body>
 		<header role="banner" class="h-event gradient" itemscope="itemscope" itemtype="http://data-vocabulary.org/Event">
             <div class="header">
-                <a href="http://accessibility-club.org" class="u-url" itemprop="url"><img itemprop="photo" alt="Accessibility Club #4 + #5 — Hands-on webworker meetup about all things web accessibility &amp; assistive technology — November 7th + 10th, 2016" src="/img/accessibility-club-logo.png" width="255" height="255"/></a>
+                <a href="https://accessibility-club.org" class="u-url" itemprop="url"><img itemprop="photo" alt="Accessibility Club #4 + #5 — Hands-on webworker meetup about all things web accessibility &amp; assistive technology — November 7th + 10th, 2016" src="/img/accessibility-club-logo.png" width="255" height="255"/></a>
                 <h1 class="p-name">Accessibility Club</h1>
                 <span class="icons-a11y icons-a11y-dims p-summary" itemprop="summary">Hands-on meetup for web developers and designers about all things web accessibility and assistive technology</span>
                 <div class="dateblock">
@@ -128,14 +128,14 @@
 					<h2>November 7th, Berlin</h2>
 					<p>The first meetup on Monday, November 7th, acts as a <strong>side event</strong> of the <a href="#btconf">beyond tellerrand // BERLIN 2016</a> conference. It's hosted by <a href="#joschi">Joschi</a> and <a href="#stefan">Stefan</a> at the fantastic premises of <a href="#contentful">Contentful</a> in Berlin Kreuzberg.</p>
                     <p><a href="#karl">Karl</a> will kick off the event at 12:00 pm with a talk with the promising title</p>
-                    <blockquote class="talk-title">Modern Web Toolsets &amp;amp; The Next Generation of Accessibility Testing Tools</blockquote>
+                    <blockquote class="talk-title">Modern Web Toolsets &amp; The Next Generation of Accessibility Testing Tools</blockquote>
                     <p>Expect a comprehensive view on the evolution of <strong>accessibilty testing</strong>, different approaches of how to add accessibility testing into a large number of touch-points in the development process and a lot of real-world examples. You will also (but not exclusively) learn quite a bit about the use of <a href="https://tenon.io" target="_blank">Tenon</a>.</p>
                     <p>The event is <strong>limited to 60 attendees</strong> and run on a <strong>non-profit basis</strong>. Attendees are required to make <strong>a donation of any amount</strong> (min. € 15) which will be used to accomodate Karl and cover the basic expenses. Budget leftovers will entirely be donated to <a href="http://www.knowbility.org" target="_blank">Knowbility</a>.</p>
                     <p>The event space itself is suitable for wheelchair users. To reach the space, however, a
 						staircase downwards has to be taken. We will happily assist you with getting there.</p>
 					<p>Join us for this great gathering in Berlin,</p>
                     <a href="https://ti.to/tollwerk/accessibility-club-4" target="_blank" class="cto">get your a11yclub #4 ticket</a>
-                    <p>and let your friends on <a href="https://twitter.com/intent/tweet?text=I%27ll+attend+Accessibility+Club+%234%21+Who%27s+in%3F+%23a11y+%23a11yclub&url=http://a11y.club&via=tollwerk" target="_blank">Twitter</a>, <a href="https://www.facebook.com/events/573196169525979" target="_blank">Facebook</a> and <a href="http://lanyrd.com/2016/accessibility-club-4" target="_blank">Lanyrd</a> know that you will be part of it!</p>
+                    <p>and let your friends on <a href="https://twitter.com/intent/tweet?text=I%27ll+attend+Accessibility+Club+%234%21+Who%27s+in%3F+%23a11y+%23a11yclub&url=https://a11y.club&via=tollwerk" target="_blank">Twitter</a>, <a href="https://www.facebook.com/events/573196169525979" target="_blank">Facebook</a> and <a href="http://lanyrd.com/2016/accessibility-club-4" target="_blank">Lanyrd</a> know that you will be part of it!</p>
 				</div>
 				<div class="right content">
                     <h2>November 10th, Nürnberg</h2>
@@ -149,7 +149,7 @@
 					<p>are <strong>limited to 50</strong> and available <strong>from € 15 each</strong> (larger
 						donations welcome). The money will
 						be used to cover Karl's travel expenses and further equip the tollwerk venue in order to bring you more events like this in the future.</p>
-					<p>Please let your friends on <a href="https://twitter.com/intent/tweet?text=I%27ll+attend+Accessibility+Club+%235%21+Who%27s+in%3F+%23a11y+%23a11yclub&url=http://a11y.club&via=tollwerk" target="_blank">Twitter</a>, <a href="https://www.facebook.com/events/703513239801157" target="_blank">Facebook</a> and <a href="http://lanyrd.com/2016/accessibility-club-5" target="_blank">Lanyrd</a> know that you support our little meetup! Also, if you're interested in <strong>supporting a11yclub as a sponsor</strong>, we'd totally <a href="mailto:hello@a11y-club.org">love to hear from you</a>!</p>
+					<p>Please let your friends on <a href="https://twitter.com/intent/tweet?text=I%27ll+attend+Accessibility+Club+%235%21+Who%27s+in%3F+%23a11y+%23a11yclub&url=https://a11y.club&via=tollwerk" target="_blank">Twitter</a>, <a href="https://www.facebook.com/events/703513239801157" target="_blank">Facebook</a> and <a href="http://lanyrd.com/2016/accessibility-club-5" target="_blank">Lanyrd</a> know that you support our little meetup! Also, if you're interested in <strong>supporting a11yclub as a sponsor</strong>, we'd totally <a href="mailto:hello@a11y-club.org">love to hear from you</a>!</p>
                     <h2>Sessions &amp; discussions</h2>
                     <p>At both meetups we will have a <strong>short break</strong> after Karl's talk where we can refresh ourselves and grab a snack. After the break we will switch into barcamp mode and collect <strong>topics for adhoc sessions and discussions</strong> like</p>
                     <ul>
@@ -168,7 +168,7 @@
                         <img src="/img/joschi-kuphal-a11y.jpg" alt="Portrait of Joschi Kuphal"/>
                         <figcaption>
                             <p><a href="https://jkphl.is" target="_blank">Joschi</a> is an interior designer, programmer and restless tinkerer from Nuremberg.</p>
-                            <p>He's working on the web since the mid 90s, founder of <a href="https://tollwerk.de" target="_blank">tollwerk</a> and the <a href="http://odl-nbg.de" target="_blank">Open Device Lab Nürnberg</a>, <a href="http://indieweb.org" target="_blank">IndieWeb</a> enthusiast and author of several of Open Source tools. Since 2013 he launched several events like the <a href="https://border-none.net" target="_blank">border:none</a> conference, the <a href="http://accessibility-club.org" target="_blank">Accessibility Club</a>, the <a href="http://coderdojo-nbg.org" target="_blank">CoderDojo Nürnberg</a>, the Homebrew Website Club Nürnberg and is one of the driving forces behind the <a href="http://nueww.de" target="_blank">Nürnberg Web Week</a>.</p>
+                            <p>He's working on the web since the mid 90s, founder of <a href="https://tollwerk.de" target="_blank">tollwerk</a> and the <a href="http://odl-nbg.de" target="_blank">Open Device Lab Nürnberg</a>, <a href="http://indieweb.org" target="_blank">IndieWeb</a> enthusiast and author of several of Open Source tools. Since 2013 he launched several events like the <a href="https://border-none.net" target="_blank">border:none</a> conference, the <a href="https://accessibility-club.org" target="_blank">Accessibility Club</a>, the <a href="https://coderdojo-nbg.org" target="_blank">CoderDojo Nürnberg</a>, the Homebrew Website Club Nürnberg and is one of the driving forces behind the <a href="http://nueww.de" target="_blank">Nürnberg Web Week</a>.</p>
                         </figcaption>
                     </figure>
 		   		</div>
@@ -206,7 +206,7 @@
 						</div>
 						<dl>
 							<dt>Internet</dt>
-							<dd><a href="http://tollwerk.de" target="_blank" class="u-url" itemprop="url">http://tollwerk.de</a></dd>
+							<dd><a href="https://tollwerk.de" target="_blank" class="u-url" itemprop="url">https://tollwerk.de</a></dd>
 							<dt>E-Mail</dt>
 							<dd><a href="mailto:info@tollwerk.de" target="_blank" class="u-email">info@tollwerk.de</a></dd>
 						</dl>
@@ -244,7 +244,7 @@
                     <div class="p-name p-label p-org" itemprop="name">beyond tellerrand // BERLIN 2016</div>
                     <dl>
                         <dt>Internet</dt>
-                        <dd><a href="http://tollwerk.de" target="_blank" class="u-url" itemprop="url">https://beyondtellerrand.com/events/berlin-2016</a></dd>
+                        <dd><a href="https://tollwerk.de" target="_blank" class="u-url" itemprop="url">https://beyondtellerrand.com/events/berlin-2016</a></dd>
                     </dl>
                     <p class="p-note">beyond tellerrand is an affordable web design and development event taking place in Düsseldorf and Berlin. btconf is an event for Web enthusiasts.</p>
                 </address>
