Added Code of Conduct

--- a/.src/html/index.html
+++ b/.src/html/index.html
@@ -121,6 +121,8 @@
 					<p>Join us for this great gathering in Berlin,</p>
 					<a href="https://ti.to/tollwerk/accessibility-club-6" target="_blank" class="cto">Get your a11yclub #6 ticket</a>
 					<p>and let your friends on <a href="https://twitter.com/intent/tweet?text=I%27ll+attend+Accessibility+Club+%236%21+Who%27s+in%3F+%23a11y+%23a11yclub&url=https://a11y.club&via=tollwerk" target="_blank">Twitter</a>, <a href="https://www.facebook.com/events/573196169525979" target="_blank">Facebook</a> and <a href="http://lanyrd.com/2017/a11yclub/" target="_blank">Lanyrd</a> know that you will be part of it!</p>
+					<h2>Code of Conduct</h2>
+					<p>We have a <a href="code-of-conduct.html">Code of Conduct</a> in place for your event. It's there to ensure maximum inclusivity and that everyone feels welcome and comfortable throughout the event. Please make sure your read and understand its contents before registering and attending.</p>
 				</div>
 		   	</section>
 		   	<section>
