Add intro slides for a11yclub #7

--- a/.src/html/index.html
+++ b/.src/html/index.html
@@ -292,47 +292,47 @@
                             <dd><a href="https://tollwerk.de" target="_blank" class="u-url" itemprop="url">https://tollwerk.de</a>
                             </dd>
                             <dt>E-Mail</dt>
-                            <dd><a href="mailto:info@tollwerk.de" target="_blank" class="u-email">info@tollwerk.de</a>
+                            <dd><a href="mailto:info@tollwerk.de" target="_blank" class="u-email" itemprop="email">info@tollwerk.de</a>
                             </dd>
                         </dl>
-                        <p class="p-note">Tollwerk is a web and advertisement agency focusing on highly customized,
+                        <p class="p-note">Tollwerk is a web and advertisement agency focused on highly customized,
                             complex TYPO3 projects, multi-device websites and services, performance and accessibility
                             matters as well as classic advertisement and graphic design.</p>
                     </address>
                 </div>
 
                 <div class="right content">
-                    <!--
-                    <h3 class="by">Kindly supported by</h3>
-                    <address class="h-card icons-contentful" itemscope="itemscope"
-                             itemtype="http://schema.org/Organization" id="contentful">
-                        <div class="p-name p-label p-org" itemprop="name">Contentful GmbH</div>
+                    <h3 class="support">Kindly supported by</h3>
+                    <address class="h-card icons-mindscreen" itemscope="itemscope"
+                             itemtype="http://schema.org/Organization" id="mindscreen">
+                        <div class="p-name p-label p-org" itemprop="name">mindscreen GmbH</div>
                         <div class="p-adr h-adr" itemprop="address" itemscope="itemscope"
                              itemtype="http://schema.org/Address">
-                            <div class="p-street-address" itemprop="street-address">Ritterstraße 12-14</div>
+                            <div class="p-street-address" itemprop="street-address">Nymphenburger Straße 147</div>
                             <div>
-                                <span class="p-postal-code" itemprop="postal-code">10969</span>
-                                <span class="p-locality" itemprop="locality">Berlin</span>
+                                <span class="p-postal-code" itemprop="postal-code">80634</span>
+                                <span class="p-locality" itemprop="locality">München</span>
                                 <span class="hide">, <span class="p-country" itemprop="country-name">Deutschland</span></span>
                                 <span class="hide" itemprop="geo" itemscope="itemscope"
                                       itemtype="http://schema.org/Geo">
-									<span class="p-latitude" itemprop="latitude">52.5020786</span>
-									<span class="p-longitude" itemprop="longitude">13.4089942</span>
+									<span class="p-latitude" itemprop="latitude">48.1514836</span>
+									<span class="p-longitude" itemprop="longitude">11.5343413</span>
 								</span>
                             </div>
-                            <div class="p-region hide" itemprop="region">Berlin</div>
+                            <div class="p-region hide" itemprop="region">München</div>
                         </div>
                         <dl>
                             <dt>Internet</dt>
-                            <dd><a href="https://www.contentful.com" target="_blank" class="u-url" itemprop="url">https://www.contentful.com</a>
+                            <dd><a href="http://www.mindscreen.de" target="_blank" class="u-url" itemprop="url">http://www.mindscreen.de</a>
+                            <dt>Email</dt>
+                            <dd><a href="mailto:salon@mindscreen.de" target="_blank" class="u-email" itemprop="email">salon@mindscreen.de</a>
                             </dd>
                         </dl>
-                        <p class="p-note">Contentful is a content management developer platform that enables web and
-                            mobile developers to manage, integrate, and deliver digital content to any kind of device or
-                            service that can connect to an API — be it smartcars, VR, mobile, web, digital signage, or
-                            any new platform.</p>
+                        <p class="p-note">mindscreen creates award winning digital media interfaces since 1999. They
+                            develop websites and applications with a strong focus on content and
+                            usability. They are accessibility experts and put user experience and
+                            customer value first.</p>
                     </address>
-                    -->
                 </div>
             </section>
             <div class="section">
